--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
   <header class="masthead" style="background-image: url('/static/img/strasbourg.jpg')">
     <div class="overlay"></div>
     <div class="container">
-      <div class="row">
+      <div class="row"
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
             <h1>Maxime's Travel Blog</h1>
