--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,7 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars">a</i>
+<ma45646/>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
@@ -56,7 +57,7 @@
   <header class="masthead" style="background-image: url('/static/img/strasbourg.jpg')">
     <div class="overlay"></div>
     <div class="container">
-      <div class="row"
+      <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
             <h1>Maxime's Travel Blog</h1>
